--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mozilla/readability": "^0.5.0",
     "@types/lodash": "^4.17.0",
     "@types/markdown-it": "^13.0.7",
+    "@types/uuid": "^9.0.8",
     "antd": "^5.15.3",
     "husky": "^9.0.11",
     "lodash": "^4.17.21",
@@ -26,7 +27,8 @@
     "openai": "^4.29.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "turndown": "^7.1.3"
+    "turndown": "^7.1.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/chrome": "0.0.263",
