--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "watch": "webpack --config webpack/webpack.dev.js --watch",
     "build": "webpack --config webpack/webpack.prod.js",
     "test": "jest",
+    "test:dev": "jest --watch",
+    "test:coverage": "jest --coverage",
     "style": "prettier --write \"src/**/*.{ts,tsx}\"",
     "prepare": "husky"
   },
@@ -31,6 +33,9 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/chrome": "0.0.263",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.69",
@@ -39,6 +44,7 @@
     "copy-webpack-plugin": "^9.1.0",
     "glob": "^7.2.3",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^2.8.8",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.1.2",
