--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,14 @@
         "outDir": "dist/js",
         "noEmitOnError": true,
         "jsx": "react",
-        "lib": ["es6", "dom", "es2019"],
-        "typeRoots": [ "node_modules/@types" ]
+        "lib": [
+            "es6",
+            "dom",
+            "es2019"
+        ],
+        "typeRoots": [
+            "node_modules/@types"
+        ],
+        "skipLibCheck": true
     }
 }
