--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,6 +12,7 @@
     "default_path": "assistant.html"
   },
   "permissions": ["sidePanel", "contextMenus", "tabs", "activeTab", "scripting", "storage"],
+  "host_permissions": ["<all_urls>"],
   "icons": {
     "16": "images/icon_16x16.png",
     "48": "images/icon_48x48.png",
