--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "Web Assistant",
-  "version": "0.3",
-  "description": "Web Assistant - second brain in your browser",
-  "minimum_chrome_version": "95",
+  "name": "MemBrain",
+  "version": "0.4",
+  "description": "MemBrain - AI-powered Second Brain",
+  "minimum_chrome_version": "114",
   "action": {},
   "background": {
     "service_worker": "js/background.js"
