--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "watch": "webpack --config webpack/webpack.dev.js --watch",
     "build": "webpack --config webpack/webpack.prod.js",
+    "package": "npm run build && zip -r build/release/membrain-$(jq -r .version package.json).zip dist",
     "test": "jest",
     "test:dev": "jest --watch",
     "test:coverage": "jest --coverage",
