--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "glob": "^7.2.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "mem-storage-area": "^1.0.3",
     "prettier": "^2.8.8",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.1.2",
